<resources>
    <string name="app_name">Контакты</string>
    <string name="name">name</string>
    <string name="telephoneNumber">telephoneNumber</string>
    <string name="telephoneNumber2">telephoneNumber2</string>
    <string name="email">email</string>
    <string name="email2">email2</string>
    <string name="description">description</string>
    <string name="ContactListTitle">Cписок контактов</string>
    <string name="ContactDetailsTitle">Детали контакта</string>
    <string name="NotificationSwitch">Уведомлять о дне рождения</string>
    <string name="ContactBirthDate">Дата рождения</string>
    <string name="bDay">Сегодня день рождения празднует </string>
    <string name="notificationBirthDay">Уведомление о дне рождения</string>
    <string name="off">Выключено</string>
    <string name="on">Включено</string>
    <string name="toastContactPermission">Требуется установить разрешение, пожалуйста, перезапустите приложение</string>
</resources>
